--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url(https://db.onlinewebfonts.com/c/23266a401747196c41257aacbcabb8c7?family=Kiddosy+Free+Regular);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
