--- a/src/App.css
+++ b/src/App.css
@@ -26,12 +26,15 @@ ul > li {
 }
 
 span {
-  display: block;
+  height: 35px;
+  aspect-ratio: 1;
   background-color: #fae57a;
-  width: 15px;
-  border-radius: 50%;
   color: black;
-  /* padding: var(--FLUSH, 9.5px) var(--FLUSH, 0px); */
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
 }
 
 .list-right li span {
